# rust-fizzbazz-wasm

./: .gitignore  Cargo.toml  README.md
sample/: index.js  package-lock.json  package.json
src/: lib.rs
