[package]
name = "rust-fizzbazz-wasm"
version = "0.1.1"
authors = ["soichiro-dev <soichiro-dev@gmail.com>"]
description = "A sample project with wasm-pack"
license = "MIT/Apache-2.0"
repository = "https://github.com/soichiro-dev/rust-fizzbazz-wasm"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"